Teaching myself HTML on the fly so this page doesn't look like garbage.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 
     
       <h2>Dependencies</h2>
-      <p>- Python - Developed on Python 2.7
-
-- DokuWiki - Developed on 2011-05-25a "Rincewind"
-
-- DokuWikiXMLRPC - https://github.com/chimeric/dokuwikixmlrpc
+      <p>
+		<ul>
+		<li> Python - Developed on Python 2.7
+		<li> DokuWiki - Developed on 2011-05-25a "Rincewind"
+		<li> DokuWikiXMLRPC - https://github.com/chimeric/dokuwikixmlrpc
+		</ul>
 </p>
     
 
