Added a link to the discussion plugin I recommend using.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<li> <a href="http://www.dokuwiki.org/dokuwiki">DokuWiki</a> - Developed on 2011-05-25a "Rincewind"
 		<li> <a href="https://github.com/chimeric/dokuwikixmlrpc">DokuWikiXMLRPC</a>
 		</ul>
+		While not required installing the <a href="http://www.dokuwiki.org/plugin:discussion?s[]=comments">Discussion Plugin</a> is highly recommended.
 </p>
     
 
