Reduced my use of the word considerable considerably.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		
 			<div class="description">A homebrewed cyber threat intelligence solution for DokuWiki </div>
  			
-			<p>Sapho was built as an off hours project to manage considerable intelligence developed from computer network defense. Building up on the considerable resources of DokuWiki Sapho automatically generates a framework of wiki resources for capturing and analyzing cyber threat intelligence and responding.</p>
+			<p>Sapho was built as an off hours project to manage intelligence developed from computer network defense activities and third party sources. Building up on the considerable resources of DokuWiki Sapho automatically generates a framework of wiki resources for capturing and analyzing cyber threat intelligence and responding.</p>
 			
 			<h2>Dependencies</h2>
 			<p>
