Fixed Twitter name link thanks to Jesse.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<p>
 				<ul>
 					<li>sapho [At] togafoamparty [Dot] com 
-					<li>@<a href="https://twitter.com/#!/saphothrat">saphothreat</a>
+					<li>@<a href="https://twitter.com/#!/saphothreat">saphothreat</a>
 				</ul>
 			</p>
 		
