Sapho public page: now with screenshots & logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
 		</div>
 		
-		<h1><a href="https://github.com/sroberts/sapho">sapho</a>
+		<h1><a href="https://github.com/sroberts/sapho"><img src="logo-256.png" width="256" height="84" alt="Logo 256"></a>
 			<span class="small">by <a href="https://github.com/sroberts">sroberts</a></span></h1>
 		
 			<div class="description">A homebrewed cyber threat intelligence solution for DokuWiki </div>
@@ -64,9 +64,17 @@
 				<ul>
 					<li> Follow DokuWiki installation instructions found at http://www.dokuwiki.org/Install
 					<li> Enable XMLRPC interface and an account
-					<li> Run templater.py as "python templater.py -w <wiki url> -u <username> -p <password> --setup" to create basic pages
+					<li> Run templater.py as "python templater.py -w \<wiki url> -u <username> -p <password> --setup" to create basic pages
 				</ul>
 			</p>
+		
+		<h2>Screenshots</h2>
+		<ul>
+			<a href="ss_startpage.png"><img src="ss_startpage_thumb.jpg" width="224" height="145" alt="Startpage Thumbnail"></a>
+			<a href="ss_intrusionset.png"><img src="ss_intrusionset_thumb.jpg" width="224" height="145" alt="Intrusion Set Page Thumbnail"></a>
+			<a href="ss_actorpage.png"><img src="ss_actorpage_thumb.jpg" width="224" height="145" alt="Actor Page Thumbnail"></a>
+			<a href="ss_implantspage.png"><img src="ss_actorpage_thumb.jpg" width="224" height="145" alt="Actor Page Thumb"></a>
+		</ul>
 		
 		<h2>Other Tools For Sapho</h2>
 			<p>Sapho works well when used with the following tools:
