Now with properly formatted < > because HTML still freaks me out.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<ul>
 					<li> Follow DokuWiki installation instructions found at http://www.dokuwiki.org/Install
 					<li> Enable XMLRPC interface and an account
-					<li> Run templater.py as "python templater.py -w \<wiki url> -u <username> -p <password> --setup" to create basic pages
+					<li> Run templater.py as "python templater.py -w &lt;wiki url&gt; -u &lt;username&gt; -p &lt;password&gt; --setup" to create basic pages
 				</ul>
 			</p>
 		
