Added reference to demo site and BitNavi's Dokuwiki appliance.

--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 		<h2>Install</h2>
 			<p>
 				<ul>
-					<li> Follow DokuWiki installation instructions found at http://www.dokuwiki.org/Install
+					<li> Follow DokuWiki installation instructions found at <a href="http://www.dokuwiki.org/Install">here</a> or try <a href="http://bitnami.org/stack/dokuwiki#cloudImage">BitNavi's DokuWiki appliance</a>
 					<li> Enable XMLRPC interface and an account
 					<li> Run templater.py as "python templater.py -w &lt;wiki url&gt; -u &lt;username&gt; -p &lt;password&gt; --setup" to create basic pages
 				</ul>
+				
 			</p>
 		
 		<h2>Screenshots</h2>
@@ -75,6 +76,9 @@
 			<a href="ss_actorpage.png"><img src="ss_actorpage_thumb.jpg" width="224" height="145" alt="Actor Page Thumbnail"></a>
 			<a href="ss_implantspage.png"><img src="ss_actorpage_thumb.jpg" width="224" height="145" alt="Actor Page Thumb"></a>
 		</ul>
+		
+		<h2>Demo</h2>
+		Try it out the test instance: <a href="http://sapho.togafoamparty.com/dokuwiki/doku.php">Sapho Threat Intelligence</a>
 		
 		<h2>Other Tools For Sapho</h2>
 			<p>Sapho works well when used with the following tools:
