I added a period. Thats all.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</ul>
 			</p>
 		<h2>License</h2>
-			<p>Copyright (c) 2012, Toga Foam Party Studios. Sapho is released under the Simplified BSD License</p>
+			<p>Copyright (c) 2012, Toga Foam Party Studios. Sapho is released under the Simplified BSD License.</p>
 		
 		<h2>Disclaimer</h2>
 			Sapho is distributed as it is, without any warranty. It's worked for us, and hopefully it works for you.
